using Domain.Common;
using Domain.Enums;

namespace Domain.Entities
{
  //TODO: Consider a better name than "Schema"
  public class Schema : AuditableEntity
  {
    //TODO
  }
}
